# astral-foundry

./: .editorconfig  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  learning-path.md
docs/adr/: 0001-use-uv-and-ruff.md  0002-workspace-structure.md  0003-shared-core-library.md
examples/: async_script.py  context_manager_example.py  error_handling_example.py  pathlib_example.py  protocol_example.py  sync_script.py
scripts/: bootstrap.sh  check.sh
